# TodoApp

./: .gitignore  Dockerfile  pyproject.toml
.github/workflows/: test.yaml
src/application/: app.py
src/application/shared/contracts/: schemas.py
src/application/shared/dependencies/: mappers.py  repos.py  services.py  session.py
src/application/shared/exception_handler/: exception_handler.py
src/application/shared/middlewares/: console_logger.py
src/application/task/: mappers.py  models.py  repositories.py  routers.py  routes.py  schemas.py  services.py
src/application/tasks/: models.py  repositories.py  routes.py  schemas.py
src/core/config/: settings.py
src/core/database/: base.py  repository.py  session.py
src/core/utils/data_generator/: data_generator.py
src/core/utils/exceptions/: response_error.py  service_exceptions.py
src/core/utils/logger/: logger.py
src/core/utils/schemas/: annotations.py  core_schema.py
tests/: conftest.py
tests/application/clients/: task_client.py
tests/integration/tasks/: conftest.py  test_create_task.py  test_get_tasks.py
tests/tests/: conftest.py
tests/tests/integration/tasks/: test_create_comment.py  test_create_task.py  test_get_full_task_info.py  test_get_task_by_id.py  test_update_task_status.py
