[project]
name = "todoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]


[tool.ruff]
target-version = "py312"

line-length = 88
indent-width = 4
