# Build system configuration
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "todoapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "faker>=40.19.1",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]


# Library-specific configurations
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
target-version = "py314"
line-length = 88
indent-width = 4


[tool.pytest]
testpaths = ["tests"]
addopts = [
    "--strict-markers"
]
markers = [
    "unit: mark a test as a unit test.",
    "integration: mark a test as an integration test.",
]
